<resources>
    <string name="app_name">wallet_app</string>
    <string name="img_text__ic_arrow_back">icon arrow back</string>
    <string name="img_text__ic_receive">icon receive</string>
    <string name="img_text__ic_send">icon send</string>
    <string name="img_text__ic_exchange">icon exchange</string>
    <string name="img_text__shape_rounded_divider">shape rounded divider</string>
    <string name="img_text__ic_close">icon close</string>
    <string name="img_text__ic_fingerprint">icon fingerprint</string>
    <string name="img_text__ic_backspace">icon backspace</string>
    <string name="quick_actions__buy">Купить</string>
    <string name="quick_actions__get">Получить</string>
    <string name="quick_actions__send">Отправить</string>
    <string name="quick_actions__give">Отдать</string>
    <string name="quick_actions__exchange">Обменять</string>
    <string name="confirm_operation_label">Я подтверждаю операцию</string>
    <string name="welcome__descr">Ваш ключ к независимости: управляйте криптоактивами с уверенностью и безопасностью</string>
    <string name="welcome__btn_label">Начать</string>
    <string name="onboarding__descr">Откройте для себя мир криптовалют: становитесь частью будущего с нашим кошельком</string>
    <string name="onboarding__notice">Создайте абсолютно новый кошелек. Или добавьте уже существующий</string>
    <string name="onboarding__create_btn_label">Создать кошелек</string>
    <string name="onboarding__import_btn_label">Импортировать кошелек</string>
    <string name="create_wallet__title">Создание кошелька</string>
    <string name="create_wallet__about_title">Что такое Seed-фраза?</string>
    <string name="create_wallet__about_descr">Seed-фраза, также известная как мнемоническая фраза, — это набор из 12, 18 или 24 слов, который используется для создания ключей доступа к вашему криптовалютному кошельку. Эта фраза выполняет несколько важных функций:</string>
    <string name="create_wallet__about_item_imgDescr1">img_repeat_success</string>
    <string name="create_wallet__about_item_imgDescr2">img_safety</string>
    <string name="create_wallet__about_item_imgDescr3">img_search_control</string>
    <string name="create_wallet__about_item_title1">Восстановление кошелька</string>
    <string name="create_wallet__about_item_title2">Безопасность</string>
    <string name="create_wallet__about_item_title3">Полный контроль</string>
    <string name="create_wallet__about_item_descr1">Seed-фраза позволяет восстановить доступ к вашему кошельку на любом устройстве. При потере или поломке устройства вы сможете восстановить все свои криптоактивы, используя только вашу seed-фразу.</string>
    <string name="create_wallet__about_item_descr2">Seed-фраза должна храниться в секрете и никогда не передаваться посторонним. Не храните её в цифровом формате или в местах, доступных другим. Запишите её на бумаге и храните в надёжном и безопасном месте.</string>
    <string name="create_wallet__about_item_descr3">С помощью seed-фразы вы получаете полный контроль над своими криптовалютами. Отсутствие зависимости от банков или других финансовых учреждений усиливает вашу финансовую независимость.</string>
    <string name="create_wallet__notice">
        Перед созданием вашего кошелька вам будет предложено записать вашу seed-фразу. Подходите к этому ответственно —
        <a href="">потеря фразы может привести к невозможности доступа к вашим средствам</a>
        , потому что кошелек не хранит никакой копии вашей фразы и только вы являетесь ее владельцем.
    </string>
    <string name="create_wallet__checkbox_agree">Я понимаю и принимаю ответственность засохранность своей Seed-фразы</string>
    <string name="create_seed__title">Seed-фраза</string>
    <string name="create_seed__num1">1. </string>
    <string name="create_seed__num2">2. </string>
    <string name="create_seed__num3">3. </string>
    <string name="create_seed__num4">4. </string>
    <string name="create_seed__num5">5. </string>
    <string name="create_seed__num6">6. </string>
    <string name="create_seed__num7">7. </string>
    <string name="create_seed__num8">8. </string>
    <string name="create_seed__num9">9. </string>
    <string name="create_seed__num10">10. </string>
    <string name="create_seed__num11">11. </string>
    <string name="create_seed__num12">12. </string>
    <string name="create_seed__item1">art</string>
    <string name="create_seed__item2">bottle</string>
    <string name="create_seed__item3">pillow</string>
    <string name="create_seed__item4">brush</string>
    <string name="create_seed__item5">music</string>
    <string name="create_seed__item6">love</string>
    <string name="create_seed__item7">note</string>
    <string name="create_seed__item8">stranger</string>
    <string name="create_seed__item9">coffee</string>
    <string name="create_seed__item10">twist</string>
    <string name="create_seed__item11">pumpkin</string>
    <string name="create_seed__item12">adore</string>
    <string name="create_seed__copy_btn">Скопировать</string>
    <string name="create_seed__notice">В целях безопасности никому не передавайте вашу Seed-фразу.</string>
    <string name="enter_pass__title">Введите пароль</string>
    <string name="enter_pass__notice">Этот пароль добавляет дополнительный уровень \n безопасности</string>
    <string name="enter_pass__num1">1</string>
    <string name="enter_pass__num2">2</string>
    <string name="enter_pass__num3">3</string>
    <string name="enter_pass__num4">4</string>
    <string name="enter_pass__num5">5</string>
    <string name="enter_pass__num6">6</string>
    <string name="enter_pass__num7">7</string>
    <string name="enter_pass__num8">8</string>
    <string name="enter_pass__num9">9</string>
    <string name="enter_pass__num0">0</string>
    <string name="trans_info__title">О транзакции</string>
    <string name="trans_info__item_send_from_label">Откуда отправлена</string>
    <string name="trans_info__item_send_from_value">2hs…3th</string>
    <string name="trans_info__item_send_where_label">Куда отправлена</string>
    <string name="trans_info__item_send_where_value">ydr…0dk</string>
    <string name="trans_info__item_amount_label">Количество монет</string>
    <string name="trans_info__item_amount_value">0.009570</string>
    <string name="trans_info__item_time_label">Время</string>
    <string name="trans_info__item_time_value">14.07.24 | 20:48</string>
    <string name="trans_info__check_btn_label">Проверить ID транзакции</string>
    <string name="send_coins__title">Bitcoin</string>
    <string name="send_coins__item_operation_type_label">Вид операции</string>
    <string name="send_coins__item_operation_type_value">отправка</string>
    <string name="send_coins__item_wallet_label">Кошелёк</string>
    <string name="send_coins__item_wallet_value">2hs…3th</string>
    <string name="send_coins__item_coin_label">Монета</string>
    <string name="send_coins__item_coin_value">BTC</string>
    <string name="send_coins__item_amount_label">Количество монет</string>
    <string name="send_coins__item_amount_value">0.009570</string>
    <string name="send_coins__send_btn_label">Отправить</string>
    <string name="content_descr__bitcoin_icon">bitcoin icon</string>
    <string name="history__title">История</string>
    <string name="history__table_header_type">Вид операции</string>
    <string name="history__table_header_date">Дата</string>
    <string name="history__table_content_exchange">Обмен</string>
    <string name="history__table_content_send">Отправка</string>
    <string name="history__table_content_receive">Получение</string>
    <string name="history__table_content_date">14.07.2024</string>
    <string name="history__search_hint">Поиск...</string>
    <string name="staking_info__title">Об операции</string>
    <string name="staking_info__item_amount_value">0.72462</string>
    <string name="staking_info__item_commission_title">Комиссия</string>
    <string name="staking_info__check_btn_label">На главную</string>
    <string name="notifications__title">Уведомления</string>
    <string name="notifications_item__allow_notif">Разрешить уведомления</string>
    <string name="notifications_item__activity">Активность в кошельке</string>
    <string name="notifications_item__activity_descr">Уведомления за получение средств</string>
    <string name="notifications_item__updates">Обновление продукта</string>
    <string name="notifications_item__updates_descr">Уведомления об обновлениях</string>
    <string name="notifications_item__promo">Акции</string>
    <string name="notifications_item__promo_descr">Уведомления о акциях кошелька</string>
    <string name="main__title">Ваш кошелек</string>
    <string name="main_balance__title">Баланс</string>
    <string name="main_balance__value">0.0000371</string>
    <string name="main_balance__currency">USDT</string>
    <string name="main_balance_btc__title">BTC</string>
    <string name="main_balance_btc__subtitle">Bitcoin</string>
    <string name="main_balance_btc__value">0.000044646</string>
    <string name="main_balance_btc__fiat_amount">=0.000044646</string>
    <string name="main_balance_btc__fiat_currency">USD</string>
    <string name="main_balance__btn">Добавить монеты</string>
    <string name="main_popup__title">Добро пожаловать!</string>
    <string name="main_popup__content">Теперь вы можете управлять своими \n криптовалютами быстро и безопасно. \n Приступим!</string>
    <string name="main_popup__btn">Готово</string>
    <string name="popup_set_currency__title">Установите валюту</string>
    <string name="popup_set_lang__title">Установите системный язык</string>
    <string name="popup_set_currency__inp">Выбрать из списка</string>
    <string name="popup_set_currency__btn">Подтвердить</string>
    <string name="popup_set_exit__title">Выйти из кошелька?</string>
    <string name="popup_set_exit__descr">Вы уверенны что хотите выйти из приложения?</string>
    <string name="popup_set_exit__cancel">Отмена</string>
    <string name="popup_set_exit__proceed">Выйти</string>
    <string name="coin_dash__list_title">Список транзакций</string>
    <string name="coin_dash__list_sort_by">Сортировать по:</string>
    <string name="coin_dash__list_filters">Фильтры</string>
    <string name="coin_dash__list_filters_close">Закрыть</string>
    <string name="coin_dash__item_title_buy">Покупка</string>
    <string name="coin_dash__item_title_send">Отправка</string>
    <string name="coin_dash__item_title_get">Получение</string>
    <string name="coin_dash__item_title_exchange">Обмен</string>
    <string name="coin_dash__item_to">Кошелёк:</string>
    <string name="coin_dash__item_recipient">bc1qm34lsc...3ewf0j77s3dk</string>
    <string name="coin_dash__item_amount">0.56789123</string>
    <string name="coin_dash__item_amount_give">-5.56789123 ETH</string>
    <string name="coin_dash__item_amount_get">+0.56789123 BTC</string>
    <string name="exchange__title">Обмен монет</string>
    <string name="exchange__inp_give_coin">Монета, которую хотите отдать</string>
    <string name="exchange__inp_select">Выбрать из списка</string>
    <string name="exchange__inp_coin_count">Количество монет</string>
    <string name="exchange__validation_err">Максимальное количество - 11.536746</string>
    <string name="exchange__inp_get_coin">Монета, которую хотите получить</string>
    <string name="exchange__confirm_btn">Подтвердить выбор</string>
    <string name="exchange_info__title">BTC/DOT</string>
    <string name="exchange_info__oper_type">обмен</string>
    <string name="exchange_info__get_coin">DOT</string>
</resources>