<!-- res/layout/trans_info_item.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/LayoutTransInfoItem" android:layout_marginTop="12dp">
    <TextView
        style="@style/TransInfoItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_coins__item_coin_label"
        android:textAlignment="textStart"
        android:layout_weight="1"
        android:id="@+id/label"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="end">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bitcoin_btc_rounded"
            android:contentDescription="@string/content_descr__bitcoin_icon"
            android:id="@+id/icon"
            />
        <TextView
            style="@style/TransInfoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_coins__item_coin_value"
            android:textAlignment="textEnd"
            android:layout_marginStart="6dp"
            android:id="@+id/value"
            />
    </LinearLayout>
    </LinearLayout>
</layout>
