<!-- res/layout/trans_info_item.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        style="@style/LayoutTransInfoItem"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/label"
            style="@style/Body_LineSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_coins__item_coin_label"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/icSizeXs"
                android:layout_height="@dimen/icSizeXs"
                android:background="@drawable/coin_btc_rounded"
                android:contentDescription="@string/content_descr__bitcoin_icon" />

            <TextView
                android:id="@+id/value"
                style="@style/Body_LineSpace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/send_coins__item_coin_value"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayout>
</layout>
