<!-- res/layout/trans_info_item.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_text__ic_arrow_back"
            android:src="@drawable/ic_exchange"
            android:layout_gravity="center"
            android:id="@+id/icon"/>
        <TextView
            style="@style/LayoutTransInfoItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/history__table_content_exchange"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/label"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_gravity="center">
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history__table_content_date"
                android:id="@+id/date"/>
        </LinearLayout>
    </LinearLayout>
</layout>