<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme_black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="68dp"
        android:layout_marginHorizontal="@dimen/contMargin"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_onboarding_splash"/>
        <TextView
            style="@style/Heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome__descr"
            android:layout_marginTop="64dp"
            android:paddingHorizontal="8dp"
            android:textAlignment="center" />
        <TextView
            style="@style/BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_theme_gray"
            android:text="@string/onboarding__notice"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="8dp"
            android:textAlignment="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/bottomContMargin"
            android:gravity="bottom">
            <Button
                style="@style/PrimaryBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalHeight"
                android:text="@string/onboarding__create_btn_label"
                android:layout_gravity="bottom" />
            <Button
                style="@style/GhostBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnNormalHeight"
                android:text="@string/onboarding__import_btn_label"
                android:layout_gravity="bottom"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>