<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/container">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coin_btc_rounded"
            android:minWidth="40dp"
            android:minHeight="40dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/send_coins__item_coin_value" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_coins__item_coin_value"
                android:textColor="@color/dark_theme_white"
                android:textSize="16sp"
                android:letterSpacing="-0.025"
                android:gravity="start"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_coins__title"
                android:textColor="@color/dark_theme_gray"
                android:textSize="16sp"
                android:letterSpacing="-0.025"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginStart="8sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_balance_btc__value"
                android:textColor="@color/dark_theme_white"
                android:textSize="16sp"
                android:letterSpacing="-0.025"
                android:layout_gravity="start"
                android:gravity="end"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <TextView
                    style="@style/Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_balance_btc__fiat_amount"
                    android:textColor="@color/dark_theme_gray"
                    android:textAlignment="textEnd"/>
                <TextView
                    style="@style/Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_balance_btc__fiat_currency"
                    android:textColor="@color/dark_theme_gray"
                    android:textAlignment="textEnd"
                    android:layout_marginStart="4sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>