<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_theme_black"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/HeaderActionIconLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_content_arrow_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            style="@style/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:text="@string/send_coins__title"
            android:textColor="@color/dark_theme_white"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <LinearLayout style="@style/LayoutAppearance.TransInfoItem" >
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/send_coins__item_operation_type_label" />
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/send_coins__item_operation_type_value"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_theme_green"/>
        </LinearLayout>
        <LinearLayout style="@style/LayoutAppearance.TransInfoItem"
            android:layout_marginTop="12dp">
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/send_coins__item_wallet_label" />
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/send_coins__item_wallet_value"
                android:textAlignment="textEnd"
                />
        </LinearLayout>
        <LinearLayout style="@style/LayoutAppearance.TransInfoItem"
            android:layout_marginTop="12dp">
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/send_coins__item_coin_label" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="end">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btc_icon_rounded"
                android:contentDescription="@string/content_descr__bitcoin_icon"/>

                <TextView
                style="@style/TransInfoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/send_coins__item_coin_value"
                android:textAlignment="textEnd"
                    android:layout_marginStart="6dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/LayoutAppearance.TransInfoItem"
            android:layout_marginTop="12dp">
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/send_coins__item_amount_label" />
            <TextView
                style="@style/TransInfoItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/send_coins__item_amount_value"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_theme_divider"
            android:layout_marginTop="18dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >
            <!-- Checkboxes -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- Checkbox checked -->
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/checkbox"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_theme_white"
                android:layout_marginStart="12dp"
                android:text="@string/send_coins__confirm_operation_label"/>
            </LinearLayout>

            <!-- Checkbox unchecked -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/checkbox_uncheck"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_theme_white"
                android:layout_marginStart="12dp"
                android:text="@string/send_coins__confirm_operation_label"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="28dp"
            android:gravity="bottom"
            >
            <Button
                android:background="@drawable/primary_btn"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/send_coins__send_btn_label"
                android:textColor="@color/dark_theme_black"
                android:layout_gravity="bottom"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>